# pento-pal

./: README.md
demo/: test-api.sh
demo/api-server/: .gitignore  requirements.in  requirements.txt
demo/demo-ui/: index.html
demo/pento-parser-poc/: .gitignore  MANIFEST.in  pyproject.toml  requirements.in  requirements.txt
demo/pento-parser-poc/pento_parser_poc/: __init__.py  bounding_box.py  bounding_boxes_to_grid_boxes.py  errors.py  get_piece_bounding_boxes.py  get_puzzle_box_corners.py  get_puzzle_grid_from_piece_boxes.py  logger.py  models.py  parse_puzzle_solution.py  settings.py
demo/pento-parser-poc/test/: test_parse_puzzle_solution.py
demo/pento-parser-poc/tools/: build-package.sh  launch-repl.sh  run-script.sh
parse-image-POC/: .gitignore  connected_cell_counts.txt  predict_orientation_with_classify.py  requirements.in  requirements.txt  train.py  train_po_classify_model.py  zzz--visualize-steps.py  zzz_basic_obj_detect_w_resnet.py  zzz_basic_obj_detect_w_resnet_2.py  zzz_conv_receptive_field.py  zzz_conv_viz.py  zzz_dist_point_to_line.py  zzz_grid_bboxes_to_puzzle_grid.py  zzz_loss.py  zzz_run_the_e2e_poc.py
parse-image-POC/dev/: run_the_e2e_poc.py
parse-image-POC/docs/: Labels-for-detect-puzzle-bb-and-kp.xml  install-python-dep.md  label-studio-login.txt
parse-image-POC/experiments/: experiment-1.yaml
parse-image-POC/lib/: obj_detect_labels_to_cropped_pieces.py  split_data_into_train_val_test.py  split_img_classify_data_for_training.py  split_obj_detect_data_for_training.py
parse-image-POC/parse_image/: settings.py
(+85 files in other folders)
